--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -62,7 +62,7 @@ header {
     background: pink;
     padding: 6px 3%;
     color: #fff;
-    margin-bottom: 35px;
+    // margin-bottom: 35px;
 
     nav {
         p.header-username {
@@ -132,7 +132,7 @@ form {
 
 // 404 Page Styling
 .not-found-container {
-    background-image: url("../public/404page.png");
+    background-image: url("../public/assets/images/404optionTwo.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
