--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -84,6 +84,32 @@ header {
     }
 }
 
+.quoteSection {
+    background: hotpink;
+    padding: 6px 3%;
+    color: #fff;
+    // margin-bottom: 35px;
+
+    nav {
+        p.header-username {
+            margin-right: 15px;
+        }
+
+        a {
+            color: #fff;
+            text-decoration: none;
+
+            &:not(:last-child) {
+                margin-right: 5px;
+            }
+
+            &.active {
+                text-decoration: underline;
+            }
+        }
+    }
+}
+
 main {
     padding: 0 3%;
 }
