--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -88,26 +88,8 @@ header {
     background: hotpink;
     padding: 6px 3%;
     color: #fff;
+    text-align: center;
     // margin-bottom: 35px;
-
-    nav {
-        p.header-username {
-            margin-right: 15px;
-        }
-
-        a {
-            color: #fff;
-            text-decoration: none;
-
-            &:not(:last-child) {
-                margin-right: 5px;
-            }
-
-            &.active {
-                text-decoration: underline;
-            }
-        }
-    }
 }
 
 main {
