Fixed quote styling. Now reaches edges of DOM just like header. Moved outside of main in Landing.js in order to keep main stylings off of it.

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -86,10 +86,10 @@ header {
 
 .quoteSection {
     background: hotpink;
-    padding: 6px 3%;
+    padding: 6px 5%;
     color: #fff;
     text-align: center;
-    // margin-bottom: 35px;
+    margin-bottom: 35px;
 }
 
 main {
