iframe doesn't work as intended, but I have one more idea that shouldn't take too long to test

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -92,6 +92,11 @@ header {
     margin-bottom: 35px;
 }
 
+iframe {
+    border: 1px solid black;
+    width: 100%; /* takes precedence over the width set with the HTML width attribute */
+}
+
 main {
     padding: 0 3%;
 }
