--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -59,10 +59,10 @@ body {
 }
 
 header {
-    background: pink;
+    background: peachpuff;
     padding: 6px 3%;
     color: #fff;
-    margin-bottom: 35px;
+    margin-bottom: 25px;
 
     nav {
         p.header-username {
@@ -150,3 +150,9 @@ form {
     padding: 20px;
     border-radius: 10px;
 }
+
+// fonts to try:
+// Indie Flower
+// Kalam
+// Luckiest Guy
+// Bangers
