--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -64,7 +64,7 @@ header {
     background: rgb(87, 189, 223);
     padding: 6px 3%;
     color: darkblue;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
 
     nav {
         p.header-username {
@@ -87,9 +87,9 @@ header {
 }
 
 .quoteSection {
-    background: lightblue;
+    background-image: url(https://images.unsplash.com/photo-1507166763745-bfe008fbb831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
     padding: 6px 5%;
-    color: darkblue;
+    color: #e6e6e6;
     text-align: center;
     margin-bottom: 25px;
 }
