--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -87,9 +87,11 @@ header {
 }
 
 .quoteSection {
-    background-image: url(https://images.unsplash.com/photo-1468581264429-2548ef9eb732?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-image: url(https://images.unsplash.com/photo-1507166763745-bfe008fbb831?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80);
+    background-position: center bottom;
+    background-size: cover;
     padding: 6px 5%;
-    color: #000050;
+    color: #fff;
     text-align: center;
     margin-bottom: 25px;
 }
