Added photo to our assets and updated path'

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -87,7 +87,7 @@ header {
 }
 
 .quoteSection {
-    background-image: url(https://images.unsplash.com/photo-1530053969600-caed2596d242?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80);
+    background-image: url(../public/assets/images/oceanPhoto.png); // https://unsplash.com/photos/XexawgzYOBc
     background-position: center bottom;
     background-size: cover;
     padding: 6px 5%;
