--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -168,6 +168,11 @@ form {
     columns: 2;
     grid-auto-rows: auto;
 
+    a {
+        text-decoration: none;
+        color: black;
+    }
+
     ul {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
