--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -173,7 +173,7 @@ form {
         color: black;
     }
 
-    ul {
+    #articleLink {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
         outline: auto;
@@ -181,7 +181,7 @@ form {
         margin-bottom: 10px;
     }
 
-    ul:hover {
+    #articleLink:hover {
         box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     }
 }
