--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -46,6 +46,12 @@ body {
     text-align: center;
 }
 
+.margin-bottom {
+    margin-bottom: 20px;
+}
+
+// Custom Styling
+
 .loading {
     position: absolute;
     top: 0;
@@ -88,12 +94,13 @@ header {
 }
 
 .quoteSection {
-    background-image: url(../public/assets/images/oceanPhoto.png); // https://unsplash.com/photos/XexawgzYOBc
+    // background-image: url(../public/assets/images/oceanPhoto.png); // https://unsplash.com/photos/XexawgzYOBc
+    background-color: lightblue;
     background-position: center bottom;
     background-size: cover;
     padding: 6px 5%;
     margin: 0 3%;
-    color: #e0f7ff;
+    color: darkblue;
     text-align: center;
     margin-bottom: 25px;
 }
@@ -104,9 +111,14 @@ main {
 
 .landing {
 
-    h2,
+    h1,
     h3 {
+        
         margin-bottom: 25px;
+    }
+
+    .background {
+        background-image: url(../public/assets/images/oceanPhoto.png); // https://unsplash.com/photos/XexawgzYOBc
     }
 }
 
@@ -167,7 +179,11 @@ form {
 
 .card {
     columns: 2;
-    grid-auto-rows: auto;
+    // grid-auto-rows: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
 
     a {
         text-decoration: none;
@@ -175,14 +191,25 @@ form {
     }
 
     ul {
+        flex: 0 1 32%;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         transition: 0.3s;
-        outline: auto;
+        outline: 3px solid rgb(87, 189, 223);
         border-radius: 5px;
         margin-bottom: 10px;
+        padding: 4px;
+
+        h3 {
+            background-color: lightgray;
+        }
+
     }
 
     ul:hover {
-        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+        box-shadow: 0 8px 16px 0 darkblue;
     }
+}
+
+.articles {
+    margin-bottom: 20px;
 }
