Turned Good Vibes Feed in header into a link to home, added styling so it won't ever look like a standard link

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -213,3 +213,11 @@ form {
 .articles {
     margin-bottom: 20px;
 }
+
+.header-title-link {
+    text-decoration: none;
+}
+
+.header-title-link:visited {
+    color: inherit;
+}
