Adjusted ocean again

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -119,6 +119,7 @@ main {
         background-image: url(../public/assets/images/oceanPhoto.png); // https://unsplash.com/photos/XexawgzYOBc
         background-position: center center;
         background-size: cover;
+        color: #00003f;
     }
 }
 
