--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,3 +1,7 @@
+// TAILWIND
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
