--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,6 +19,10 @@ body,
     height: 100%;
 }
 
+#root {
+    flex: 1;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
         'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
