--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -80,6 +80,18 @@ body {
     background: #fff;
 }
 
+.landing h1 {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.landing h3 {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+
 header {
     font-family: 'Indie Flower', cursive;
     background: rgb(87, 189, 223);
