--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -32,6 +32,17 @@ body {
 }
 
 // Global Classes
+.header-one {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 5px;
+}
+
+.header-three {
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
 .sticky-footer {
     min-height: 73.7vh;
 }
@@ -79,18 +90,6 @@ body {
     align-items: center;
     background: #fff;
 }
-
-.landing h1 {
-    font-size: 30px;
-    font-weight: bold;
-    padding-top: 5px;
-}
-
-.landing h3 {
-    font-size: 20px;
-    padding-bottom: 10px;
-}
-
 
 header {
     font-family: 'Indie Flower', cursive;
