--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -215,10 +215,23 @@ form {
     background-color: lightblue;
     border-radius: 5px;
     padding: 3%;
+    margin-bottom: 30px;
+}
+
+#paymentButton,
+#authButton {
+    border: none;
+    border-radius: 3px;
+    padding: 8px 10px;
+    font-size: .98rem;
+    background: #28224e;
+    color: #fff;
 }
 
 #paymentButton {
+    background: #28224e;
     margin-top: 20px;
+    
 }
 
 #authButton {
