made payment form clearer with padding

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,6 +19,11 @@ body,
     height: 100%;
 }
 
+.paymentform-input {
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
+
 #root {
     flex: 1;
 }
