gave auth form inputs a cleaner look

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -289,3 +289,8 @@ form {
     margin-bottom: 30px;
     border-radius: 5px;
 }
+
+#authForm input {
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
