--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -96,7 +96,6 @@ header {
     background: rgb(87, 189, 223);
     padding: 6px 3%;
     color: darkblue;
-    margin-bottom: 25px;
     height: 75px;
 
     h1 {
@@ -133,6 +132,7 @@ header {
     color: darkblue;
     text-align: center;
     margin-bottom: 25px;
+    border-radius: 5px;
 }
 
 main {
