fixed margin and relative postioning on register form to centre it in the middle of the page

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -294,3 +294,12 @@ form {
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+#authForm{
+    margin-top: 175px;
+}
+
+.authForm-title {
+    position: relative;
+    top: 150px;
+}
